carduinowebdroid/WebContent/static/style.css
/*CarDuinoDroid Main Stylesheet*/

html{
	height: 100%;
	width: 100%;
	position:relative;
	overflow:hidden !important;
}

body {
	font-family: Tahoma, Geneva, sans-serif;
	height: 100%;
	width: 100%;
	overflow:hidden !important;
	margin:0px;
}

td{
	vertical-align:top;
	height:100%;
	overflow:hidden !important;
}

a{
	color: #7e7975;
	text-decoration:none;
}

textarea{
	resize:none;
}

#index_logo {
	margin-top:50px;
	text-align:center;	
}

#index_loginbox {
	text-align:center;
	margin:0 auto;
    background: #fffaf6;
    border-radius: 4px;
    width: 380px;
    color: #7e7975;
    height: 175px;
    box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);		
}

#index_logintable {
	margin: 0 auto;
}

#index_buttonsubmit{
	margin-top:5px;
}

#index_guestbox{
	text-align:center;
  	margin:0 auto;
	background: #fffaf6;
    border-radius: 4px;
    width: 380px;
    color: #7e7975;
    height: 45px;
    padding-top: 10px;
    padding-bottom: 10px;
    box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);
}

#index_note{
	text-align:center;
	margin:0 auto;
	background: #fffaf6;
    border-radius: 4px;
    width: 500px;
    color: #7e7975;
    height: 40px;
    padding-top: 10px;
    padding-bottom: 10px;
    box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);
}

#index_footer{
	color: #7e7975;
	text-align:center;	
}

#main_table{
	margin-top:20px;
	width: 100%;
	height:100%;
}

#main_table_sidebar_left{
	width: 20%;
	min-width: 20%;
}

#main_table_sidebar_right{
	width: 20%;  
	min-width: 200px;
}

#main_table_stream{
	width:60%;
	min-width:60%;
}

#main_chat{
	margin-left:5px;
	border:1px solid #ECD6BF;
	padding: 3px;
	width: 96%;
	height: auto !important;
	height: 75%;
	min-height: 75%;
	border-radius: 4px;
	box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);
}

#main_chat_container{
	height:100%;
	min-height:100%;
}

#main_q_container{
	height:100%;
	min-height:100%;
}

#main_chat_textinput{
    border:1px solid #ECD6BF;
    margin-left:10px;
    margin-right:auto;
    padding:3px;
    height: 75px;
	width:96%;
    border-radius: 4px;
    margin-left:4px;
    padding:3px;
    margin-top: 8px;
	maxlength: 256;
}

#main_chat_chars{
	text-align:right;
	color:#666;
	font-size:14px;
	}
	
#main_chat_speak{
	margin-top:5px;
	width:100%;
}

#main_q{
	margin-right:5px;
	border:1px solid #ECD6BF;
	padding: 3px;
	height: auto !important;
	height: 75%;
	min-height: 75%;
	border-radius: 4px;
	box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);
}

#main_qsubmit{
	margin-top:10px;
	width:100%;
}

#main_logout{
	position:absolute;
	bottom:0;	
	right:0;
	margin-bottom:5px;
	padding-left:8px;
	padding-right:8px;
}

#main_admin{
	position:absolute;
	bottom:0;
	left:1;
	margin-bottom:5px;
	padding-left:8px;
	padding-right:8px;
}

#main_connect{
	position:absolute;
	bottom:0;
	left:1;
	font-size:14px;
	padding-left:3px;
	padding-right:3px;
	margin-bottom:50px;
}

#main_take_control{
	position:absolute;
	bottom:0;
	right:0;
	font-size:14px;
	padding-left:3px;
	padding-right:3px;
	margin-bottom:50px;
}

#main_stream{
	border:1px solid #ECD6BF;
	padding: 3px;
	height: auto !important;
	height: 75%;
	min-height: 75%;
	border-radius: 4px;
	box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);
}

#main_controls{
	border-radius: 4px;
    padding: 3px;
    margin-top: 10px;
   	box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);
	height: auto !important;
	height: 19%;
	min-height: 19%;
}

#main_control_table{
width:100%;
}

#main_steering{
	border:1px solid #ECD6BF;
    margin-left:10px;
    margin-right:auto;
    padding:3px;
    border-radius: 4px;
    margin-left:4px;
    margin-top: 8px;
	width:45%; 
}

#main_gadget{
	border:1px solid #ECD6BF;
    margin-left:10px;
    margin-right:auto;
    padding:3px;
    border-radius: 4px;
    margin-left:4px;
    margin-top: 8px;
	width:30%;
}

#main_slider{
    border:1px solid #ECD6BF;
    margin-left:10px;
    margin-right:auto;
    padding:3px;
    border-radius: 4px;
    margin-left:4px;
    margin-top: 8px;
	
}

#main_gadget_button_horn{
	margin-top:15px;
	width:100%;
}

#main_gadget_button_light{
	margin-top:15px;
	width:100%;
}

#main_steering_button_up{
	margin-top:10px;
	width:100%;
}

#main_steering_button_left{
	margin-top:10px;
	width:100%;
}

#main_steering_button_down{
	margin-top:10px;
	width:100%;
}

#main_steering_button_right{
	margin-top:10px;
	width:100%;
}

#main_steering_table{
	width:100%;
	
}

#main_maxspeed{
	height:100px;
}

#main_close_left{
	margin-left:3px;
	height:20px;
	width:20px;
}

#main_open_left{
	margin-left:3px;
	height:20px;
	width:20px;
	display:none
}

#main_close_right{
	margin-left:3px;
	height:20px;
	width:20px;
}

#main_open_right{
	margin-left:3px;
	height:20px;
	width:20px;
	display:none
}

#admin_menu{
	margin-left:10px;
	margin-top:10px;
	float:left;
}

#admin_menuicons{
	margin-top:4px;
}

#admin_usercontainer{
	margin-left:10px;
	margin-top:10px;
	float:left;
}

#admin_logcontainer{
	margin-left:10px;
	margin-top:10px;
	float:left;
}

#admin_box{
	border:1px solid #ECD6BF;
	padding: 3px;
	margin-left:5px;
	margin-top:5px;
	width:250px;
	border-radius: 4px;
	box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);	
}

#admin_setting{
	border:1px solid #ECD6BF;
	padding: 3px;
	margin-left:8px;
	width:545px;
	float:left;
	border-radius: 4px;
	box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);	
}

#about_frame{
	border:1px solid #ECD6BF;
	padding: 3px;
	width:50%;
	border-radius: 4px;
	box-shadow:
        0 2px 2px rgba(0,0,0,0.2),
        0 1px 5px rgba(0,0,0,0.2),
        0 0 0 12px rgba(255,255,255,0.4);
}

#about_home{
	margin-top:10px;
	margin-bottom:10px;
	width:15%;	
}

#about_logo {
	margin-top:10px;
	text-align:center;	
}

.ui-icon-carat-1-e{
	margin-top:4px !important;
}

